<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BlueWalker Demo</string>
    <string name="app_name_short">Demo</string>
    <string name="action_settings">Settings</string>

    <string name="user_input">User Input</string>
    <string name="building">Building</string>
    <string name="start_location">Starting Location</string>
    <string name="destination">Destination</string>
    <string name="path">Path</string>

    <string name="history">History(UserState|Location)</string>
    <string name="current_location">Current User Location</string>
    <string name="current_user_state">Current User State</string>

    <string name="init_process">Initialize Process</string>
    <string name="main_loop">Main Loop</string>
</resources>